ghc-4335c07/testsuite/tests/safeHaskell/safeInfered/UnsafeWarn03.stderr

UnsafeWarn03.hs:3:16: warning: [-Wunsafe]
    ‘UnsafeWarn03’ has been inferred as unsafe!
    Reason:
        UnsafeWarn03.hs:8:1: error:
            System.IO.Unsafe: Can't be safely imported!
            The module itself isn't safe.
